tests/ui/parser/issues/unnessary-error-issue-138401.rs
pub fn foo(x: i64) -> i64 {
    x.abs) 
    //~^ ERROR mismatched closing delimiter
}
//~^ ERROR unexpected closing delimiter: `}`

fn main() {}
